syntax = "proto3";
package proto.grpc;

message FixedRequest {
    int32 id = 1;
    string host = 2;
    string port = 3;
    int32 district = 4;
    string message = 5;
}

message FixedResponse {
    string message = 1;
}

service FixedService {
    rpc broken(FixedRequest) returns (FixedResponse);
    rpc streamFixed(FixedRequest) returns (stream FixedResponse);
}

